fix: align modal buttons

--- a/src/components/connect.less
+++ b/src/components/connect.less
@@ -780,6 +780,11 @@ label {
     border: 0px;
     display: flex;
 
+    .cancel-dave-favorite {
+      text-align: right;
+      width: 100%;
+    }
+
     .delete-favorite {
       text-align: left;
       flex-grow: 1;
